# laser-engraver-k4

./: .gitignore  K4_LaserApp_Cursor_Prompt.md  PROTOCOL_NOTES.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
src/: App.tsx  main.tsx  webSerial.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/drivers/linux/: 99-ch340-k4.rules
src-tauri/drivers/macos/: README.txt
src-tauri/drivers/windows/: README.txt
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/driver_installer/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/image_processor/: dither.rs  mod.rs  outline.rs  transforms.rs
src-tauri/src/serial/: connection.rs  mod.rs  protocol.rs  worker.rs
src/components/: SerialEventBootstrap.tsx
src/components/Canvas/: CanvasRulers.tsx  ExportModal.tsx  LaserCanvas.tsx  (+2 more)
src/hooks/: useImageProcessor.ts  useJobRunner.ts  useLaserKeyboard.ts  useSerial.ts
src/image/: browserImagePipeline.ts  styleProcessors.ts
src/lib/: agentDebugLog.ts  desktopNotifications.ts  imageClipPath.ts  imgDisplayRect.ts  jobMachineRegion.ts  laserCanvasApi.ts  laserOperations.ts  maskBoundaryPaths.ts  rasterJobPath.ts  syncJobSourceFromCanvas.ts
src/serial/: k4Protocol.ts  webSerialBridge.ts
src/store/: editorHistoryStore.ts  editorUiStore.ts  imageStore.ts  laserCanvasUiStore.ts  laserHistoryStore.ts  serialStore.ts  settingsStore.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: constants.ts  mmToPx.ts
tools/: k4_sniffer.py
(+25 files in other folders)
